--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,18 @@ header {
   transform: rotate(180deg);
 }
 
+@media (max-width: 767px) {
+  .text-left {
+    font-size: calc(12px + 5.1 * ((100vw - 320px) / 1600));
+  }
+}
+
+@media (min-width: 767px) {
+  .text-left {
+    font-size: calc(12px + 3 * (100vw  / 1600));
+  }
+}
+
 .nike-air {
   padding: 95px 0;
 }
@@ -562,7 +574,7 @@ header {
 }
 
 .blog {
-  padding: 110px;
+  padding: 110px 0;
 }
 
 .blog__title {
@@ -573,6 +585,7 @@ header {
   display: flex !important;
   align-items: flex-start;
   justify-content: space-between;
+  gap: 30px;
   padding-top: 88px;
 }
 
@@ -763,7 +776,7 @@ header {
     margin-top: 20px;
   }
   .popular-card {
-    column-gap: 30px;
+    gap: 30px;
     flex-wrap: wrap;
     justify-content: center;
   }
@@ -773,6 +786,9 @@ header {
 }
 
 @media (max-width: 768px) {
+  .pre-fall-collections {
+    padding: 0;
+  }
   .pre-fall-collections__inner {
     flex-direction: column-reverse;
   }
@@ -780,17 +796,38 @@ header {
     width: 67%;
     margin-top: 40px;
   }
+  .popular-card {
+    padding-bottom: 30px;
+  }
   .blog__inner {
     flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+  }
+  .blog__picture {
+    margin-left: 0;
+  }
+  .blog__picture::before {
+    display: none;
+  }
+  .blog__content {
+    width: 100%;
   }
 }
 
 @media (max-width: 575.98px) {
+  .intro {
+    min-height: 900px;
+  }
+  .top-bar {
+    padding: 30px 0;
+  }
   .text-left {
     left: 15px;
   }
   .social {
     right: 15px;
+    row-gap: 15px;
   }
   .pre-fall-collections__content {
     width: 100%;
@@ -798,6 +835,9 @@ header {
 }
 
 @media (max-width: 500px) {
+  .intro {
+    min-height: 835px;
+  }
   .footer-menu {
     flex-direction: column;
   }
@@ -809,6 +849,9 @@ header {
   }
   .form__btn {
     width: 100%;
+  }
+  .social-footer {
+    justify-content: center;
   }
 }
 /*# sourceMappingURL=style.css.map */
