--- a/scss/site-parts/_blog.scss
+++ b/scss/site-parts/_blog.scss
@@ -1,5 +1,5 @@
 .blog {
-  padding: 110px;
+  padding: 110px 0;
   &__title {
     text-align: center;
   }
@@ -7,6 +7,7 @@
     display: flex !important;
     align-items: flex-start;
     justify-content: space-between;
+    gap: 30px;
     padding-top: 88px;
   }
   &__picture {
