--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,7 @@ header {
   border-radius: 50%;
   width: 55px;
   height: 55px;
+  z-index: 100;
 }
 
 .menu-circle {
@@ -239,7 +240,8 @@ header {
 }
 
 .menu__link {
-  color: #888888;
+  color: white;
+  font-size: 35px;
 }
 
 .icon-menu {
@@ -286,6 +288,19 @@ header {
 .menu-open .icon-menu::after {
   transform: rotate(45deg);
   bottom: calc(50% - 1px);
+}
+
+.open {
+  display: flex;
+  flex-direction: column;
+  background: #82f4d3;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
 }
 
 .intro {
@@ -736,6 +751,18 @@ header {
   color: #a6a5a5;
 }
 
+@media (max-width: 767px) {
+  .copyright__item {
+    font-size: calc(12px + 5.1 * ((100vw - 320px) / 1600));
+  }
+}
+
+@media (min-width: 767px) {
+  .copyright__item {
+    font-size: calc(12px + 3 * (100vw  / 1600));
+  }
+}
+
 .support__link {
   color: #888888;
 }
@@ -797,7 +824,7 @@ header {
     margin-top: 40px;
   }
   .popular-card {
-    padding-bottom: 30px;
+    padding-bottom: 50px;
   }
   .blog__inner {
     flex-direction: column;
@@ -840,6 +867,9 @@ header {
   }
   .blog {
     padding: 50px 0;
+  }
+  .blog__inner {
+    padding-top: 50px;
   }
   .blog__picture {
     margin-bottom: 50px;
