--- a/scss/site-parts/_intro.scss
+++ b/scss/site-parts/_intro.scss
@@ -2,18 +2,17 @@
   background-image: url(../img/header/bg-intro.jpg);
   background-position: center;
   background-size: cover;
-  min-height: 1020px;
+  min-height: rem(1020);
   position: relative;
   &__content {
     position: relative;
-    padding-top: 220px;
+    padding-top: rem(220);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
   }
   &__title {
     color: #202123;
-    // font-size: 150px;
     @include adaptiv(150, 100);
     font-weight: 700;
     font-family: 'Roboto', sans-serif;
@@ -22,13 +21,12 @@
     position: relative;
     color: #323237;
     background: $accentColor;
-    padding: 20px 25px;
-    // font-size: 25px;
+    padding: rem(20) rem(25);
+
     @include adaptiv(25, 13);
     font-weight: 700;
     text-transform: uppercase;
-    // line-height: 2;
-    letter-spacing: 2px;
+    letter-spacing: rem(2);
     &:hover::after {
       top: 0;
       left: 0;
@@ -39,24 +37,24 @@
       width: 100%;
       height: 100%;
       position: absolute;
-      top: 10px;
-      left: -10px;
-      border: 2px solid $accentColor;
+      top: rem(10);
+      left: rem(-10);
+      border: rem(2) solid $accentColor;
       transition: all 1s ease-out;
     }
   }
 }
 .social {
   position: absolute;
-  right: 58px;
-  bottom: 50px;
+  right: rem(58);
+  bottom: rem(50);
 
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
+  row-gap: rem(30);
   &__item {
-    width: 55px;
-    height: 55px;
+    width: rem(55);
+    height: rem(55);
 
     display: flex;
     justify-content: center;
@@ -75,9 +73,9 @@
 }
 .text-left {
   position: absolute;
-  left: 58px;
-  bottom: 50px;
-  height: 335px;
+  left: rem(58);
+  bottom: rem(50);
+  height: rem(335);
   @include adaptiv(15, 12);
   writing-mode: vertical-rl;
   transform: rotate(180deg);
