--- a/scss/site-parts/_pre-fall-collections.scss
+++ b/scss/site-parts/_pre-fall-collections.scss
@@ -1,6 +1,6 @@
 .pre-fall-collections {
-  padding: 95px 0;
-  margin-bottom: 100px;
+  padding: rem(95) 0;
+  margin-bottom: rem(100);
   &__inner {
     display: flex;
     align-items: center;
@@ -8,10 +8,6 @@
   }
   &__content {
     width: 50%;
-  }
-  &__title {
-  }
-  &__text {
   }
   &__btn {
     justify-content: start;
@@ -25,16 +21,15 @@
       background-image: linear-gradient( 114deg, rgb(101,224,188) 0%, rgb(201,249,235) 100%);
       opacity: 0.72;
       position: absolute;
-      right: -103px;
-      bottom: -103px;
-      width: 293px;
-      height: 388px;
-      // z-index: 122;
+      right: rem(-103);
+      bottom: rem(-103);
+      width: rem(293);
+      height: rem(388);
     }
     img {
       position: relative;
       z-index: 22;
-      padding: 7px;
+      padding: rem(7);
       box-shadow: 0px 5px 19px 1px #dfdcdc;
       background-color: $whiteColor;
     }
