--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,14 +6,9 @@
 @import 'common/mixins';
 
 body {
-  font-size: 15px;
+  font-size: rem(15);
   color: $textColor;
   font-family: $fontFamily;
-
-}
-
-h1, h2, h3, h4 {
-  // color: $titleColor;
 }
 button {
   border: 0;
@@ -56,27 +51,16 @@ fieldset {
 }
 .title {
   color: #000;
-  // font-size: 45px;
   @include adaptiv(45, 30);
   font-weight: 500;
   font-family: 'Cormorant Garamond', serif;
 }
 .text {
-  padding-top: 16px;
-  padding-bottom: 43px;
-  font-size: 15px;
+  padding-top: rem(16);
+  padding-bottom: rem(43);
+  font-size: rem(15);
   font-weight: 300;
   line-height: 2;
-}
-.picture {
-  // background-color: $whiteColor;
-  // padding: 7px;
-  // opacity: 0.72;
-  // box-shadow: 0px 5px 19px 1px rgba(223, 220, 220, 75%);
-  // cursor: pointer;
-  // &:hover {
-  //   box-shadow: none;
-  // }
 }
 .com-btn {
   display: flex;
@@ -85,8 +69,8 @@ fieldset {
     position: relative;
     color: #0a0a0a;
     background: $accentColor;
-    padding: 12px 28px;
-    font-size: 15px;
+    padding: rem(12) rem(28);
+    font-size: rem(15);
     font-weight: 400;
     text-transform: capitalize;
     &:hover::after {
@@ -99,9 +83,9 @@ fieldset {
       width: 100%;
       height: 100%;
       position: absolute;
-      top: -10px;
-      left: -10px;
-      border: 2px solid $accentColor;
+      top: rem(-10);
+      left: rem(-10);
+      border: rem(2) solid $accentColor;
       transition: all 1s ease-out;
     }
   }
