--- a/css/style.css
+++ b/css/style.css
@@ -239,9 +239,9 @@ header {
   display: block;
 }
 
-.menu__link {
-  color: white;
-  font-size: 2.1875rem;
+.menu_show .menu__link {
+  color: #888888;
+  font-size: 0.9375rem;
 }
 
 .icon-menu {
@@ -301,6 +301,11 @@ header {
   left: 0;
   align-items: center;
   justify-content: center;
+}
+
+.open .menu__link {
+  color: white;
+  font-size: 2.1875rem;
 }
 
 .intro {
